Fix color contrast issues

--- a/examples/src/scss/style.scss
+++ b/examples/src/scss/style.scss
@@ -1,6 +1,8 @@
+// Cayman overrides
 $header-bg-color: #3498db;
 $header-bg-color-secondary: #2c3e50;
 $section-headings-color: #3498db;
+$blockquote-text-color: #606c71;
 
 @import "../../../src/scss/react-dual-listbox";
 @import "cayman";
